--- a/style.css
+++ b/style.css
@@ -1,18 +1,103 @@
+body {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 50px;
+}
+
+#gameboard {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 0px;
+	border: 1px solid black;
+}
+
+ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 0px;
+	list-style-type: none;
+	margin: 0px;
+	padding: 0px;
+}
+
+li {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 0px;
+	list-style-type: none;
+	border: 1px solid black;
+	width: 100px;
+	height: 100px;
+	margin: 0px;
+}
+
+table {
+	border:1px solid black;
+	width: 306px;
+}
+
+th {
+	border:1px solid black;
+	height: 40px;
+	width: 50px;
+	text-align: center;
+	background-color: #69bfe2;
+	font-size: 20px;
+}
+
+td {
+	border:1px solid black;
+	height: 40px;
+	width: 50px;
+	text-align: center;
+	background-color: #b2cad4;
+	font-size: 20px;
+}
 
 
-/*
 
-a {
-	text-decoration: none;
+.modal {
+	display: none; /* Hidden by default */
+	position: centered; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	left: 0;
+	top: 0;
+	width: 50%; /* Full width */
+	height: 100%; /* Full height */
+	overflow: auto; /* Enable scroll if needed */
+	background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto; /* 15% from the top and centered */
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
 	font-weight: bold;
-	cursor:pointer
 }
 
-a:hover {
-	color: blue;
+.close:hover,
+.close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
 }
 
-*/
 
 
 
