--- a/style.css
+++ b/style.css
@@ -5,39 +5,77 @@ body {
 	gap: 50px;
 }
 
-#gameboard {
+.button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: lightcoral;
+	border-style: solid;
+	border-color: black;
+	border-width: 3px;
+	border-radius: 20px;
+	width: 200px;
+	height: 40px;
+	font-size: 30px;
+	color: black;
+	padding: 4px ;
+	cursor:pointer;
+}
+
+.button:active {
+	background-color: black;
+	border-color: lightcoral;
+	color: lightcoral;
+}
+
+
+
+table.gameboard, td.gameboard {
+	border: 2px solid black;
+	border-collapse: collapse;
+}
+
+table.gameboard {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 0px;
-	border: 1px solid black;
 }
 
-ul {
+tr.gameboard {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	gap: 0px;
-	list-style-type: none;
 	margin: 0px;
 	padding: 0px;
 }
 
-li {
+td.gameboard {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
 	align-items: center;
 	gap: 0px;
-	list-style-type: none;
-	border: 1px solid black;
 	width: 100px;
 	height: 100px;
 	margin: 0px;
+	font-family: "Apple Chancery", cursive;
+	font-size: 90px;
+	animation: cellAnimation 1s infinite;
+	background-color: lightyellow;
 }
 
-table {
+@keyframes cellAnimation {
+	from {
+		font-size: 90px;
+	}
+	to {
+		font-size: 95px;
+	}
+}
+
+table.outcome {
 	border:1px solid black;
 	width: 306px;
 }
@@ -81,6 +119,7 @@ td {
 	padding: 20px;
 	border: 1px solid #888;
 	width: 80%; /* Could be more or less, depending on screen size */
+	font-size: 32 px;
 }
 
 /* The Close Button */
